--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       context: ../.
       dockerfile: docker/development/Dockerfile
     image: robertosilvino/railsgirls-dev:latest
+    user: ":${DOCKERGID}"
     ports:
       - 3002:3000
     environment:
