--- a/docker/development/Dockerfile
+++ b/docker/development/Dockerfile
@@ -5,4 +5,4 @@ WORKDIR ${APP_DIR}
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Expose Nginx HTTP service
-EXPOSE 3000
+EXPOSE $RACK_PORT
