--- a/docker/development/Dockerfile.base
+++ b/docker/development/Dockerfile.base
@@ -1,6 +1,6 @@
 ARG RUBY_VERSION="2.2"
-#FROM ruby:${RUBY_VERSION}-alpine3.7
 
+#FROM ruby:${RUBY_VERSION}
 FROM ubuntu:16.04
 # example: https://gist.github.com/zentetsukenz/5e330b801f983e3d39757686dcb41cc2
 
@@ -74,8 +74,8 @@ RUN apt-add-repository ppa:brightbox/ruby-ng \
 
 RUN RAILS_ENV=${RAILS_ENV} gem install --no-rdoc --no-ri bundler rake && \
     RAILS_ENV=${RAILS_ENV} bundle config --global jobs "$(($(getconf _NPROCESSORS_ONLN)*2))" && \
-    RAILS_ENV=${RAILS_ENV} bundle config --global retry 2  && \
-    RAILS_ENV=${RAILS_ENV} bundle check || RAILS_ENV=${RAILS_ENV} bundle install
+    RAILS_ENV=${RAILS_ENV} bundle config --global retry 2
+#    RAILS_ENV=${RAILS_ENV} bundle check || RAILS_ENV=${RAILS_ENV} bundle install
 
 WORKDIR $REPO_DIR
 
