--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,29 +1,26 @@
 # COMMON
 DOCKERIZED=true
-DB_PORT=3307
 DB_DATABASENAME=railsgirls
-
-## DEVELOPMENT
-#DB_USERNAME=root
-#DB_PASSWORD=root
-#DB_HOST_IP=192.168.1.100
-#RAILS_ENV=development
-
-# STAGING
 DB_USERNAME=root
 DB_PASSWORD=root
-DB_HOST_IP=192.168.15.3
-RAILS_ENV=production
+DB_PORT=3306
+#DB_PORT=3307
+
+## DEVELOPMENT
+DB_HOST_IP=150.162.9.144
+RAILS_ENV=development
+
+# STAGING
+#DB_HOST_IP=192.168.15.3
+#RAILS_ENV=production
 
 # PRODUCTION
-#DB_USERNAME=root
-#DB_PASSWORD=root
 #DB_HOST_IP=192.168.1.1
 #RAILS_ENV=production
 
 # TEST
-#DB_USERNAME=root
-#DB_PASSWORD=root
-#DB_HOST_IP=service_db
-#RAILS_ENV=test
 #DB_DATABASENAME=railsgirls_test
+#DB_USERNAME=travis
+#DB_PASSWORD=
+#DB_HOST_IP=127.0.0.1
+#RAILS_ENV=test
