--- a/docker/.env.travis
+++ b/docker/.env.travis
@@ -7,5 +7,6 @@ DB_DATABASENAME=railsgirls_test
 DB_USERNAME=travis
 DB_PASSWORD=
 #DB_HOST_IP=127.0.0.1
-DB_HOST_IP=mysql
+#DB_HOST_IP=mysql
+#DB_HOST_IP=localhost
 RAILS_ENV=test
