--- a/docker/.env.travis
+++ b/docker/.env.travis
@@ -1,10 +1,10 @@
 # COMMON
 DOCKERIZED=true
-DB_PORT=3306
+DB_PORT=3307
 
 # TEST
 DB_DATABASENAME=railsgirls_test
-DB_USERNAME=travis
+DB_USERNAME=root
 DB_PASSWORD=
 #DB_HOST_IP=127.0.0.1
 #DB_HOST_IP=mysql
