--- a/docker/staging_passenger/config/app.nginx.conf
+++ b/docker/staging_passenger/config/app.nginx.conf
@@ -1,12 +1,34 @@
 server {
     listen 80;
+
     root /home/app/repo/public;
+
     server_name raisgirls.com.br;
 
     passenger_enabled on;
     passenger_user app;
 
-    passenger_ruby /usr/bin/ruby2.2;
+#    passenger_ruby /usr/bin/ruby2.2;
+    passenger_ruby /usr/bin/ruby;
+
+    passenger_min_instances 8;
+    client_max_body_size 100m;
+    client_body_buffer_size 128k;
+
+    location ~ "^/assets/.*-[0-9a-f]{32}.*" {
+        gzip_static on; # to serve pre-gzipped version
+        gzip_vary on;
+        expires max;
+        add_header  ETag "";
+        add_header  Cache-Control public;
+        break;
+    }
+
+    location ~^/images/ {
+        expires max;
+        add_header  Cache-Control public;
+        break;
+    }
 }
 
-# passenger_pre_start http://raisgirls.com.br/;
+passenger_pre_start http://raisgirls.com.br/;
